# pytorch_influence_functions

./: .gitignore  compose.yaml  grad_retrain.py  influence.py  learning.py  pyproject.toml  utils.py
pytorch_influence_functions/: calc_influence_function.py  influence_function.py  utils.py
